<resources>
    <string name="app_name">My Food Diary</string>
    <string name="female_male_option">Please enter your gender. It is important for Calorie Budget</string>
    <string name="height_info">Calorie Budget and neutrient recommendations depend on body height. You can enter the estimated height.</string>
    <string name="age_info">Calorie Budget and neutrient recommendations depend on your age. Please Enter your birthdate</string>
    <string name="weight_info">Calorie Budget and neutrient recommendations depend on your weight. Please Enter your weight</string>
    <string name="calculated_bmi">Your Calculated BMI is:</string>
    <string name="activity_level">Activity level</string>
    <string name="kg">Kg</string>
    <string name="lbs">lbs</string>
    <string name="next">Next</string>
    <string name="lbsvskg">lbs Vs Kg</string>

    <string-array name="array_activity_levels">
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days per week)</item>
        <item>Moderate exercise (3–5 days per week)</item>
        <item>Heavy exercise (6–7 days per week)</item>
        <item>Very heavy exercise (twice per day, extra heavy workouts)</item>
    </string-array>


    <string name="user_info">Your Informations</string>


    <!--tab name-->
    <string name="tab1">Home</string>
    <string name="tab2">Food Suggestions</string>
    <string name="tab3">Analysis</string>

    <!--Tab 1-->

    <!--navigation drawer menu name-->
    <string name="drawer_home">Home</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_gPlus">Google+</string>
    <string name="drawer_youtube">YouTube</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="app_email">dr.m.karthiik@gmail.com</string>


    <!-- TODO: Remove or change this placeholder text -->


    <!--EMI-->

    <!--Action Bar-->

    <!--Exit Dialog-->
    <string name="menu_item_breakfast">Breakfast</string>
    <string name="menu_item_lunch">Lunch</string>
    <string name="menu_item_dinner">Dinner</string>
    <string name="auto_complete_hint">Search Food</string>
    <string name="categories_text">Categories</string>
    <string name="category_text">Search food by category</string>
    <string name="recent">Recent</string>
    <string name="recent_text">Search by your recent foods</string>
    <string name="frequent">Frequent</string>
    <string name="frequent_text">Search by food you eat the most</string>
    <string name="simple_calories">Add simple Calories</string>
    <string name="simple_calories_text">Imput calories manually</string>
    <string name="female_btn_text">I am a female</string>
    <string name="male_btn">I am a male</string>
    <string name="current_weight">Current Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="weight_input_unit">Weight Unit</string>
    <string name="total_calories">Total Calories</string>
    <string name="zero_cal">0</string>
    <string name="protein">Protein</string>
    <string name="carb">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="serving_measurement">Add Serving Measurement</string>
    <string name="serving_amount">Select Amount</string>
    <string name="default_amt">1.0</string>
    <string name="show_breakfast">Breakfast</string>
    <string name="show_lunch_text">Lunch</string>
    <string name="show_lunch">Lunch</string>
    <string name="show_dinner">Dinner</string>
    <string name="show_water">Water</string>
    <string name="show_calories">Calorie Info</string>
    <string name="water_value">7</string>
    <string name="water_taken">0 glasses today</string>
    <string name="vit_e">Vitamin E</string>
    <string name="vit_c">Vitamin C</string>
    <string name="vit_a">Vitamin A</string>
    <string name="water">Water</string>
    <string name="dietry_fiber">Dietry Fiber</string>
    <string name="category_list">Choose a category</string>
    <string name="food_list">Choose a food</string>
    <string name="chart_select_text">Choose a category</string>
    <string name="chart_type">Select Chart Type</string>
    <string name="chart_data_availability">Not Enough Data</string>
    <string name="chart_data_available_day">Showing The Result For</string>
    <string name="weight_motivation">Right on! Stay with it, you will reach your goal as planned!</string>
    <string name="update_weight">Update your goal weight</string>
    <string name="input_prefill"> </string>
    <string name="input_hint">Enter your weight</string>
    <string name="congrates_goal_complete">Congrates!!! You\'ve achieved your goal. Now it\'s time to update your goal</string>
    <string name="your_weight">My weight is</string>
    <string name="weight_estimation">Estimate your goal weight for now. You can update this later</string>
    <string name="new_goal">Congrats, you\'ve set a new goal!</string>
    <string name="goal_cal_need">You need to maintain the following to reach your goal</string>
    <string name="get_started">GET STARTED</string>
    <string name="update_current_weight">Update your current weight</string>
    <string name="enter_current_weight">Enter current weight</string>
    <string name="weight_estimation_current">Estimate your weight for now. You can update this later</string>
    <string name="continue_text">CONTINUE</string>
    <string name="recent_list">Recent Foods</string>
    <string name="unregistered_user">Unregistered User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count_goals">0/10 Goals achieved</string>
    <string name="see_rank">Show My Rank</string>
    <string name="action_settings">Settings</string>
    <string name="weight_progress">Weight Progress</string>
    <string name="daily_progress">Daily Progress</string>
    <string name="congrats">Congratulations!\nYou are all set!</string>
    <string name="welcome">You only need to maintain the routine.</string>
    <string name="needed_cal">Your daily needed calorie is:</string>
    <string name="welcome2">Don\'t worry! We will help you to achieve your goal</string>
    <string name="goal_streak">Goal Streak</string>
    <string name="goal_duration">Goal duration</string>
    <string name="goal_description">Goal description</string>
    <string name="goal_name">Goal Name</string>
    <string name="goal_completed">Goal Completed</string>
    <string name="add_calorie">Add Food</string>
    <string name="goal_motivation">\"Every habit starts with a small step\"</string>
    <string name="suggestion_refresh"> Refresh suggestions!</string>


</resources>
