<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="userinfo.UserWeightInfoActivity">


    <TextView
        android:id="@+id/kg_text2"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/kg_text"
        android:layout_alignTop="@+id/weight_editText_id2"
        android:text="@string/kg"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/weight_editText_id2"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="84dp"
        android:layout_marginStart="87dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/weight_info_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:textSize="25sp"
        android:text="@string/weight_info" />


    <ImageView
        android:id="@+id/weight_info_img"
        android:layout_width="174dp"
        android:layout_height="192dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:src="@drawable/ic_launcher_background" />


    <TextView
        android:id="@+id/kg_text"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/weight_editText_id"
        android:layout_marginEnd="122dp"
        android:text="@string/kg"
        android:textSize="22sp" />


    <Button
        android:id="@+id/next_page_btn"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#cdd3f4"
        android:text="@string/next" />

    <ToggleButton
        android:id="@+id/lbs_vs_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="124dp"
        android:checked="true"

        android:text="@string/lbsvskg"
        android:textOff="@string/lbs"
        android:textOn="@string/kg" />

    <EditText
        android:id="@+id/weight_editText_id"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/weight_editText_id2"
        android:layout_marginBottom="157dp"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>