<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/goal_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/circleshape" />

        <TextView
            android:id="@+id/goal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/goal_image"
            android:text="@string/goal_name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/goal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/goal_name"
            android:layout_below="@id/goal_name"
            android:layout_toRightOf="@id/goal_image"
            android:text="@string/goal_description" />

        <ProgressBar
            android:id="@+id/goal_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/goal_name"
            android:layout_below="@id/goal_details"
            android:max="100"
            android:progress="50" />

        <TextView
            android:id="@+id/goal_streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/goal_name"
            android:layout_below="@id/goal_progress_bar"
            android:text="@string/goal_streak" />

        <TextView
            android:id="@+id/goal_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/goal_progress_bar"
            android:layout_below="@id/goal_progress_bar"
            android:text="@string/goal_duration" />

        <TextView
            android:id="@+id/goal_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="" />

    </RelativeLayout>
</android.support.v7.widget.CardView>