<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="generalpersonactivities.ShowBMRActivity"
    android:background="@drawable/green_bck_4">

    <TextView
        android:id="@+id/congrats_text"
        android:text="@string/congrats"
        style="@style/UserInfoText"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/welcome_text"
        android:text="@string/welcome"
        style="@style/UserInfoText"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/congrats_text"
        />



    <TextView
        android:id="@+id/bmr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/needed_cal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_text"
        android:padding="10dp"
        style="@style/UserInfoText" />

    <TextView
        android:id="@+id/bmr_text_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bmr_text"
        android:text="a"
        android:padding="10dp"
        style="@style/UserInfoText"

        android:textStyle="bold"
         />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="29dp"
        android:text="Next" />
    <LinearLayout
        android:id="@+id/layout_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/bmr_text_data"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/excercise"
            android:layout_margin="16dp"/>
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/food"
            android:layout_margin="16dp"/>
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/water2"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <TextView

        android:text="@string/welcome2"
        style="@style/UserInfoText"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_pic"
        />


</RelativeLayout>