<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="userinfo.UserGenderInfoActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <TextView
        android:id="@+id/gender_info_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/title_text_color"
        android:text="@string/female_male_option" />


<!--
    <Button
        android:id="@+id/next_page_btn"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#cdd3f4"
        android:text="Next" />

    <Button
        android:id="@+id/female_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="96dp"
        android:layout_marginStart="74dp"
        android:text="Female" />

    <Button
        android:id="@+id/male_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/female_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="76dp"
        android:text="Male" />
        -->

    <ImageView
        android:id="@+id/gender_info_img"
        android:layout_width="174dp"
        android:layout_height="192dp"
        android:layout_below="@id/gender_info_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:src="@drawable/female_male_icon" />

    <RadioGroup
        android:id="@+id/RGroup"
        android:layout_width="238dp"
        android:layout_height="98dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp"
        android:layout_marginStart="77dp"
        android:layout_centerHorizontal="true">

        <RadioButton

            android:id="@+id/male_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_btn"
            android:layout_margin="10dp"
            />

        <RadioButton
            android:id="@+id/female_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/female_btn_text" />
    </RadioGroup>


</RelativeLayout>